testsuite/tests/ghc-regress/typecheck/should_compile/T4912a.hs
module T4912a where

data TheirData = TheirData

class Foo a where
     foo :: a -> a

class Bar a where
    bar :: a -> String
